--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -36,9 +36,6 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Install GH CLI
-        uses: dev-hanz-ops/install-gh-cli-action@v0.2.0
-
       - name: create new version in pyproject.toml
         run: |
           poetry version $VERSION
@@ -65,6 +62,8 @@ jobs:
         run: | 
           APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
           gh release create $APP_VERSION -F README.md --title "${APP_VERSION}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
