--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -72,10 +72,14 @@ jobs:
     name: "Build and publish docker"
     needs: create-release
     runs-on: [self-hosted, linux, X64]
+    env:
+      TAG: ${{ needs.create-release.outputs.APP_VERSION }}
     
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ env.TAG }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
