--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -90,10 +90,6 @@ jobs:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: build and push docker
-        run: |
-          echo "DOCKER_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)"  >> $GITHUB_ENV
-    
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -102,5 +98,5 @@ jobs:
           sbom: true
           provenance: mode=max
           push: true
-          tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ env.DOCKER_VERSION }}
+          tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
   
