--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -72,14 +72,12 @@ jobs:
     name: "Build and publish docker"
     needs: create-release
     runs-on: [self-hosted, linux, X64]
-    env:
-      TAG: ${{ needs.create-release.outputs.APP_VERSION }}
     
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ env.TAG }}
+          ref: ${{ needs.create-release.outputs.APP_VERSION }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -98,5 +96,5 @@ jobs:
           sbom: true
           provenance: mode=max
           push: true
-          tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+          tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ needs.create-release.outputs.APP_VERSION }}
   
