--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Create github release
         run: | 
           APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
-          echo "APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)" >> $GITHUB_OUTPUT"
+          echo "APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)" >> $GITHUB_OUTPUT
           gh release create $APP_VERSION -F README.md --title "${APP_VERSION}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
