--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -64,7 +64,6 @@ jobs:
       - name: Create github release
         run: | 
           APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
-          echo "APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)" >> $GITHUB_OUTPUT
           gh release create $APP_VERSION -F README.md --title "${APP_VERSION}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -75,10 +74,17 @@ jobs:
     runs-on: [self-hosted, linux, X64]
     
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@master
         with:
-          ref: ${{ needs.create-release.outputs.APP_VERSION }}
+          fetch-depth: 0
+
+      - name: Checkout latest release tag
+        run: |
+          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          git checkout $LATEST_TAG
+          APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
+          echo "APP_VERSION=${APP_VERSION}" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -97,5 +103,5 @@ jobs:
           sbom: true
           provenance: mode=max
           push: true
-          tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ needs.create-release.outputs.APP_VERSION }}
+          tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ env.APP_VERSION }}
   
