--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Create github release
         run: | 
           APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
-          gh release create $APP_VERSION -F README.md --title "${APP_VERSION}"
+          gh release create $APP_VERSION -F README.md --title "${APP_VERSION}" --target $(git branch --show-current)
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -75,14 +75,16 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          
 
       - name: Checkout latest release tag
         run: |
           LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
           git checkout $LATEST_TAG
+          echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
           APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
           echo "APP_VERSION=${APP_VERSION}" >> $GITHUB_ENV
 
@@ -97,6 +99,7 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v5
+        if: env.APP_VERSION == env.LATEST_TAG
         with:
           context: .
           file: ./Dockerfile
