--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,14 +15,20 @@ on:
 permissions:
   contents: write
 
+env:
+  IMAGE_NAME: detection-aggregator
+  DOCKERHUB_USERNAME: starwit
+  DOCKERHUB_ORG: starwitorg   
+
 jobs:
-  pr-build-poetry:
-    name: PR Build with Poetry
+  create-release:
+    name: create new release
     runs-on: [self-hosted, linux, X64]
     container:
-        image: starwitorg/base-python-image:0.0.6
-        volumes:
-            - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
+      image: starwitorg/base-python-image:0.0.14
+      volumes:
+          - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
+
     steps:
       #----------------------------------------------
       #       check-out repo and set-up python
@@ -31,18 +37,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install GH CLI
-        uses: dev-hanz-ops/install-gh-cli-action@v0.2.0
-
+        uses: dev-hanz-ops/install-gh-cli-action@v0.2.1        
+        
       - name: create new version in pyproject.toml
         run: |
           poetry version $VERSION
         env:
           VERSION: ${{ inputs.versionChoice }}
-
-      - name: Install project
-        run: |
-          poetry config cache-dir /root/.cache/pypoetry
-          bash -c ./start_make.sh
 
       - name: commit new version
         run: |
@@ -62,62 +63,47 @@ jobs:
 
       - name: Create github release
         run: | 
-          APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-          gh release create $APP_VERSION -F README.md
+          APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
+          gh release create $APP_VERSION -F README.md --title "${APP_VERSION}" --target $(git branch --show-current)
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VERSION: ${{ inputs.versionChoice }}
+
+  publish_docker:
+    name: "Build and publish docker"
+    needs: create-release
+    runs-on: [self-hosted, linux, X64]
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Checkout latest release tag
+        run: |
+          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          git checkout $LATEST_TAG
+          echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
+          APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
+          echo "APP_VERSION=${APP_VERSION}" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login internal docker registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: docker.internal.starwit-infra.de
-          username: ${{ secrets.DOCKER_INTERNAL_USERNAME }}
-          password: ${{ secrets.DOCKER_INTERNAL_PASSWORD }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: build docker
-        run: |
-          docker build -t docker.internal.starwit-infra.de/detection-aggregator:tmp .
-
-  publish_docker:
-    name: "Publish docker"
-    needs: pr-build-poetry
-    runs-on: [self-hosted, linux, X64]
-
-    steps:
-    - name: Login internal docker registry
-      uses: docker/login-action@v3
-      with:
-        registry: docker.internal.starwit-infra.de
-        username: ${{ secrets.DOCKER_INTERNAL_USERNAME }}
-        password: ${{ secrets.DOCKER_INTERNAL_PASSWORD }}
-        
-    - name: push docker versioned
-      run: |
-        DOCKER_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        docker tag docker.internal.starwit-infra.de/detection-aggregator:tmp docker.internal.starwit-infra.de/detection-aggregator:$DOCKER_VERSION
-        docker push docker.internal.starwit-infra.de/detection-aggregator:$DOCKER_VERSION
-
-  publish_helm:
-    name: "Publish helm chart"
-    needs: pr-build-poetry
-    runs-on: [self-hosted, linux, X64]
-    
-    steps:
-    - name: get helm
-      uses: azure/setup-helm@v4
-
-    - name: run helm package
-      working-directory: deployment/helm
-      run: |
-        HELM_VERSION=$(cat ../../pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        helm package . --version $HELM_VERSION --app-version $HELM_VERSION
-
-    - name: run helm push
-      working-directory: deployment/helm
-      run: |
-        HELM_VERSION=$(cat ../../pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        curl -i --fail-with-body -u ${{ secrets.HELM_INTERNAL_USERNAME }}:${{ secrets.HELM_INTERNAL_PASSWORD }} --data-binary "@detection-aggregator-$HELM_VERSION.tgz" https://helm.internal.starwit-infra.de/api/charts
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        if: env.APP_VERSION == env.LATEST_TAG
+        with:
+          context: .
+          file: ./Dockerfile
+          sbom: true
+          provenance: mode=max
+          push: true
+          tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ env.APP_VERSION }}
+  
