--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,7 +27,10 @@ jobs:
     container:
       image: starwitorg/base-python-image:0.0.14
       volumes:
-          - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
+        - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
+      env:
+        PASSPHRASE: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD_FLAT }}
+        GPG_KEY: ${{ secrets.OSSRH_GPG_SECRET_KEY_B64 }}
 
     steps:
       #----------------------------------------------
@@ -61,10 +64,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: build apt package
+        run: |
+            echo "Build APT package"
+            bash -c "export PATH=/root/.local/bin/:$PATH; poetry self add poetry-plugin-export; make build-deb"
+            echo "Finish building APT package"
+
       - name: Create github release
         run: | 
           APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n) 
-          gh release create $APP_VERSION -F README.md --title "${APP_VERSION}" --target $(git branch --show-current)
+          gh release create $APP_VERSION -F README.md --title "${APP_VERSION}" --target $(git branch --show-current) ./target/*deb ./target/*.dsc
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
