--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -25,7 +25,7 @@ jobs:
     name: create new release
     runs-on: [self-hosted, linux, X64]
     container:
-      image: starwitorg/base-python-image:0.0.14
+      image: starwitorg/debian-packaging:0.0.2
       volumes:
         - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
       env:
@@ -44,6 +44,7 @@ jobs:
         
       - name: create new version in pyproject.toml
         run: |
+          export PATH=/root/.local/bin/:$PATH
           poetry version $VERSION
         env:
           VERSION: ${{ inputs.versionChoice }}
