--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -25,7 +25,7 @@ jobs:
     name: create new release
     runs-on: [self-hosted, linux, X64]
     container:
-      image: starwitorg/debian-packaging:0.0.2
+      image: starwitorg/debian-packaging:0.0.3
       volumes:
         - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
       env:
@@ -44,7 +44,6 @@ jobs:
         
       - name: create new version in pyproject.toml
         run: |
-          export PATH=/root/.local/bin/:$PATH
           poetry version $VERSION
         env:
           VERSION: ${{ inputs.versionChoice }}
@@ -68,7 +67,7 @@ jobs:
       - name: build apt package
         run: |
             echo "Build APT package"
-            bash -c "export PATH=/root/.local/bin/:$PATH; poetry self add poetry-plugin-export; make build-deb"
+            bash -c "poetry self add poetry-plugin-export; make build-deb"
             echo "Finish building APT package"
 
       - name: Create github release
