--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -31,13 +31,13 @@ jobs:
       - name: Install project
         run: |
           poetry config cache-dir /root/.cache/pypoetry
-          bash -c "export PATH=/root/.local/bin/:$PATH; make test"
+          bash -c "make test"
 
   apt-build:
     name: package APT
     runs-on: [self-hosted, linux, X64]
     container:
-        image: starwitorg/debian-packaging:0.0.2
+        image: starwitorg/debian-packaging:0.0.3
         env:
           PASSPHRASE: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD_FLAT }}
           GPG_KEY: ${{ secrets.OSSRH_GPG_SECRET_KEY_B64 }}
@@ -48,6 +48,6 @@ jobs:
       - name: build apt package
         run: |
             echo "Build APT package"
-            bash -c "export PATH=/root/.local/bin/:$PATH; poetry self add poetry-plugin-export; make build-deb"
+            bash -c "poetry self add poetry-plugin-export; make build-deb"
             echo "Finish building APT package"
 
