--- a/settings.template.yaml
+++ b/settings.template.yaml
@@ -3,12 +3,11 @@ redis:
   host: redis
   port: 6379
   stream_id: stream1
-  input_stream_prefix: objectdetector
+  input_stream_prefix: geomapper
   output_stream_prefix: aggregator
 chunk:
   buffer_size: 3
   time_in_ms: 2000
-  use_camera_coordinates: True
   geo_coordinate:
     latitude: 10
     longitude: 10
