--- a/settings.template.yaml
+++ b/settings.template.yaml
@@ -5,10 +5,10 @@ redis:
   stream_id: stream1
   input_stream_prefix: geomapper
   output_stream_prefix: aggregator
-chunk:
-  buffer_size: 3
-  time_in_ms: 2000
+chunk: # delivers a detection count message for a given aggregation window and class-id
+  buffer_size: 3 # number of timeslots to buffer before processing
+  time_in_ms: 2000 # time slot in ms to aggregate detections. The time slot start time is delivered in detectionCount
   geo_coordinate:
-    latitude: 10
-    longitude: 10
+    latitude: 10 # width in degrees of the detection-aggregation window
+    longitude: 10 # height in degrees of the detection-aggregation window
 prometheus_port: 8000
